# target-preprocessing

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
target_preprocessing/: __init__.py  dataset.py  features.py  plots.py
target_preprocessing/modeling/: predict.py  train.py
